# iot-bigdata-streamlit-dashboard

./: .gitignore  README.md  explore-nb.py  explore.ipynb  gzip-to-parquet-etl.py  pyproject.toml  streamlit-app.py
streamlit-iot-monitoring-dashboard/: streamlit-app.py
streamlit-iot-monitoring-dashboard/.streamlit/: config.toml
v1-datalog-compacter/: README-compacterv1.md  data-cleaner.py  gzip-to-parquet-etl.py
v1-datalog-compacter/media/: data compacter project.excalidraw
