[project]
name = "iot-bigdata-streamlit-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.9",
    "duckdb>=1.4.3",
    "ipykernel>=7.1.0",
    "plotly>=6.5.0",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "s3fs>=0.4.2",
    "streamlit>=1.52.1",
]
